--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,42 +2,63 @@
 <html>
 <head>
   <!-- META DATA -->
-  <title>portfolio website</title>
+  <title>{{page.title}}</title>
   <!--STYLE SHEETS-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.4.0/gridlex.min.css">
   <link rel="stylesheet" href="style.css" />
   <!--Scripts-->
-    <script src="https://use.fontawesome.com/ab1ceb66af.js"></script>
-</head>
+  <script src="https://use.fontawesome.com/ab1ceb66af.js"></script>
+
+    <!---add a scroll to the top button--->
+  <button onclick="topFunction()" id="myBtn" title="Go to top">Go to Top</button>
+    <script>
+  // When the user scrolls down 20px from the top of the document, show the button
+  window.onscroll = function() {scrollFunction()};
+
+  function scrollFunction() {
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+          document.getElementById("myBtn").style.display = "block";
+      } else {
+          document.getElementById("myBtn").style.display = "none";
+      }
+  }
+
+  // When the user clicks on the button, scroll to the top of the document
+  function topFunction() {
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
+  }
+  </script>
+  </head>
 <body>
   <header>
     <nav class="grid-spaceBetween">
-        <a class="col-2" href="index.html">Home</a>
-        <a class="col-2" href="about.html">About</a>
+        <a class="col-2" href="/index.html">Home</a>
+        <a class="col-2" href="/about.html">About</a>
         <h2 class="col-2">Blah</h2>
-        <a class="col-2" href="index.html#contact">Contact</a>
-        <a class="col-2" href="blog.html">Blog</a>
+        <a class="col-2" href="/index.html#contact">Contact</a>
+        <a class="col-2" href="/blog.html">Blog</a>
     </nav>
     <!-- add search abaility within site here-->
     <!-- banner section -->
-      <section class="grid-center banner">
-        <div class="col-6 centerText">
-          <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
-          <a href="#"><i class="fa fa-hand-peace-o" aria-hidden="true"></i></a>
-        </div>
-      </section>
+    <section class="grid-center banner">
+      <div class="col-6 centerText">
+        <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
+        <a href="#"><i class="fa fa-hand-peace-o" aria-hidden="true"></i></a>
+      </div>
+    </section>
       <!--end of banner section -->
-      <img src="" alt="fancy line" />
+    {% include fancyline.html %}
   </header>
-<!--end of header-->
-{{content}}
-<footer>
-  <nav>
-    <a href="http://facebook.com/beguma88"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-    <a href="http://instagram.com/amzbe88/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-    <a href="http://linkedin.com/in/beguma"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-    <a href="http://pinterest.co.uk/amzb/"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-  </nav>
-</footer>
+    <!--end of header-->
+    {{content}}
+    <footer>
+    <nav>
+      <a href="http://facebook.com/beguma88"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+      <a href="http://instagram.com/amzbe88/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+      <a href="http://linkedin.com/in/beguma"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+      <a href="http://pinterest.co.uk/amzb/"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
+    </nav>
+  </footer>
 </body>
 </html>
