--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -2,26 +2,26 @@
 layout: default
 ---
 <section class="grid">
-<div class="col-7">
-<h2>{{page.subtitle}}</h2>
-{{content}}
-</div>
-<div class="col-3">
-  <img src="{{page.sidebarpic}}" alt="{{sidebar.alt}}"/>
-</div>
+  <div class="col-7">
+    <h2>{{page.subtitle}}</h2>
+    {{content}}
+  </div>
+  <div class="col-3">
+    <img src="{{page.sidebarpic}}" alt="{{page.sidebaralt}}"/>
+  </div>
 </section>
-{{include.fancyline}}
+{% include fancyline.html %}
 <section class="box">
-<h2>recent blog posts</h2>
-<div class="grid">
-  {% for post in site.posts %}
-<div class="col-3">
-<a href="{{post.url}}">
-<div style="background-image:url('{{post.pagepic}}')">
-  <h3> {{post.title}} </h3>
-</div>
-</a>
-</div>
-{% endfor %}
-</div>
+  <h2>recent blog posts</h2>
+  <div class="grid">
+    {% for post in site.posts %}
+    <div class="col-3">
+      <a href="{{post.url}}">
+        <div style="background-image:url('{{post.pagepic}}')">
+        <h3> {{post.title}} </h3>
+        </div>
+      </a>
+    </div>
+    {% endfor %}
+  </div>
 </section>
