--- a/_includes/fancyline.html
+++ b/_includes/fancyline.html
@@ -1,1 +1,1 @@
-<img src="/Images/fancy-line1.jpg" class="full-width" alt="fancy line" />
+<img class="fancyline" src="/Images/line.jpg" alt="fancy line">
