--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,49 +3,63 @@
 <head>
   <!-- META DATA -->
   <title>{{page.title}}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--STYLE SHEETS-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.4.0/gridlex.min.css">
-  <link rel="stylesheet" href="style.css" />
-  <!--Scripts-->
   <script src="https://use.fontawesome.com/ab1ceb66af.js"></script>
+  <!--Scripts-->
+  <link rel="stylesheet" href="/style.css" />
 
-    <!---add a scroll to the top button--->
-  <button onclick="topFunction()" id="myBtn" title="Go to top">Go to Top</button>
-    <script>
-  // When the user scrolls down 20px from the top of the document, show the button
-  window.onscroll = function() {scrollFunction()};
-
-  function scrollFunction() {
-      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-          document.getElementById("myBtn").style.display = "block";
-      } else {
-          document.getElementById("myBtn").style.display = "none";
-      }
-  }
-
-  // When the user clicks on the button, scroll to the top of the document
-  function topFunction() {
-      document.body.scrollTop = 0;
-      document.documentElement.scrollTop = 0;
-  }
-  </script>
   </head>
 <body>
-  <header>
-    <nav class="grid-spaceBetween">
-        <a class="col-2" href="/index.html">Home</a>
-        <a class="col-2" href="/about.html">About</a>
-        <h2 class="col-2">Blah</h2>
-        <a class="col-2" href="/index.html#contact">Contact</a>
-        <a class="col-2" href="/blog.html">Blog</a>
+  <header id="top">
+<!-- hamburger menu to appear in each page -->
+
+    <nav>
+      <div class="burger-button mob-show">
+          <span class="burger-top"></span>
+          <span class="burger-middle"></span>
+          <span class="burger-bottom"></span>
+      </div>
+
+       <div class="burger-menu">
+        <ul>
+          <li>
+            <a href="/index.html">Home</a>
+          </li>
+          <li>
+            <a href="/about.html">About</a>
+          </li>
+          <li>
+            <a href="/index.html#contact">Contact</a>
+          </li>
+          <li>
+            <a href="/blog.html">Blog</a>
+          </li>
+        <ul>
+      </div>
     </nav>
+
     <!-- add search abaility within site here-->
     <!-- banner section -->
-    <section class="grid-center banner">
-      <div class="col-6 centerText">
-        <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
-        <a href="#"><i class="fa fa-hand-peace-o" aria-hidden="true"></i></a>
+    <section class="banner" style="background-image:url('{{page.banner}}')">
+      <div class="mob-hide">
+        <nav class="grid-spaceBetween">
+          <a class="col" href="/index.html">Home</a>
+          <a class="col" href="/about.html">About</a>
+          <h2 class="col-4"> MYSTICAL WANDERER </h2>
+          <a class="col" href="/index.html#contact">Contact</a>
+          <a class="col" href="/blog.html">Blog</a>
+
+        </nav>
       </div>
+      <div class ="grid-center-bottom lowerbanner">
+        <div class="col-6 centerText" >
+        <h1>Cherish all life has to offer...</h1>
+        <div class="centerText">
+          <a href="#firstsection"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
+        </div>
+        </div>
     </section>
       <!--end of banner section -->
     {% include fancyline.html %}
@@ -60,5 +74,12 @@
       <a href="http://pinterest.co.uk/amzb/"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
     </nav>
   </footer>
+  <a class="top-button button" href="#top"><i class="fa fa-angle-double-up" aria-hidden="true"></i></a>
+
+  <!-- copy script tag for the link below from cdnjs.com-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="/js/script.js"></script>
+  <script type="text/javascript" src="/js/hamburger.js"></script>
+  <script async defer src="//assets.pinterest.com/js/pinit.js"></script>
 </body>
 </html>
