--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 
     <!-- add search abaility within site here-->
     <!-- banner section -->
-    <section class="banner" style="background-image:url('{{page.banner}}')">
+    <section class="banner {% if page.url == '/quotes.html' %} quotes-banner {% endif %}" style="background-image:url('{{page.banner}}')">
       <div class="mob-hide">
         <nav class="grid-spaceBetween-middle main-nav">
           <h2 class="col-4"> MYSTICAL WANDERER </h2>
