--- a/_includes/fancyline.html
+++ b/_includes/fancyline.html
@@ -1,4 +1,4 @@
 <!-- <img class="fancyline" src="/Images/line.jpg" alt="fancy line"> -->
 
-<section class="banner small" style="background-image:url('{{page.banner}}')">
+<section class="banner small" style="background-image:url('/{{page.banner}}')">
 </section>
